[gd_scene load_steps=3 format=3 uid="uid://2cftnam31qlk"]

[ext_resource type="Script" path="res://src/UI/Components/Scripts/input.gd" id="1_irscf"]
[ext_resource type="Texture2D" uid="uid://eapdg5rk1sxp" path="res://Assets/Icons/redo.png" id="2_r7qo6"]

[node name="Input" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -602.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_irscf")

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 3
vertical_alignment = 1
text_overrun_behavior = 3

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(26, 0)
layout_mode = 2

[node name="ResetButton" type="Button" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("2_r7qo6")
flat = true
icon_alignment = 1
expand_icon = true

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Suffix" type="Label" parent="LineEdit"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -14.0
offset_bottom = 14.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.674815, 0.674815, 0.674815, 0.419608)
vertical_alignment = 1

[connection signal="pressed" from="Control/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="gui_input" from="LineEdit" to="." method="_on_line_edit_gui_input"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
